syntax = "proto3";

package demo;

option java_multiple_files = true;
option java_package = "com.grpc.demo.grpc";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloGrpcService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}